massively improve fullscreen code when dealing with fullscreen bug on ios 9.2.1 and safari

--- a/css/custom.css
+++ b/css/custom.css
@@ -62,6 +62,27 @@ div.stretchy-wrapper > div {
   border-radius: 100px;
 }
 
+a:link {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:visited {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: inherit;
+}
+
+a:active {
+    text-decoration: underline;
+    color: inherit;
+}
+</style>
+
 /* Sections
 */
 .section {
